Updated GlobalMentor AWT library to use generic collections.